src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Sponsor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the project sponsor.</inlineHelpText>
        <label>Sponsor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Sponsor Name)</relationshipLabel>
        <relationshipName>Sponsor_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Licensing_Record__c</fullName>
        <label>State Licensing Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <label>CF Sub Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenants_in_Common__c</fullName>
        <inlineHelpText>This indicates whether the Property is owned by more than one person or entity as &quot;Tenants in Common&quot;</inlineHelpText>
        <label>Tenants in Common</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_MW_Installed__c</fullName>
        <inlineHelpText>How much the company has installed since it&apos;s inception.</inlineHelpText>
        <label>Total MW Installed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Worker_s_Comp_Policy_Effective_Date__c</fullName>
        <inlineHelpText>Contractor&apos;s Worker&apos;s Comp Policy Effective Date.</inlineHelpText>
        <label>Worker&apos;s Comp Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Worker_s_Comp_Policy_Expiration_Date__c</fullName>
        <inlineHelpText>Contractor&apos;s Worker&apos;s Comp Policy Expiration Date.</inlineHelpText>
        <label>Worker&apos;s Comp Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Detail_Listing</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Segment_Affiliation__c</columns>
        <columns>Client_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Status__c</field>
            <operation>notEqual</operation>
            <value>Dormant,Dead</value>
        </filters>
        <filters>
            <field>Segment_Affiliation__c</field>
            <operation>contains</operation>
            <value>broker</value>
        </filters>
        <label>Account Detail Listing</label>
    </listViews>
    <listViews>
        <fullName>Account_Detail_Listing_Single_RM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Segment_Affiliation__c</columns>
        <columns>Client_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Status__c</field>
            <operation>notEqual</operation>
            <value>Dormant,Dead</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>bchan</value>
        </filters>
        <label>Account Detail Listing-Single RM</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Segment_Affiliation__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Contractor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Contractor</value>
        </filters>
        <label>Contractor</label>
    </listViews>
    <listViews>
        <fullName>M_C_MbarC</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STREET</field>
            <operation>equals</operation>
            <value>674 Rancheros Dr.</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_CITY</field>
            <operation>equals</operation>
            <value>San Marcos</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>92069</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>M-C Construction</value>
        </filters>
        <label>M-C (MbarC)</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>Account_Priority__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Import2_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Rosendin_Electric_Southern_California</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STREET</field>
            <operation>equals</operation>
            <value>5572 Fresca Dr.</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>La Palma</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
        </filters>
        <label>Rosendin Electric - Southern California</label>
    </listViews>
    <recordTypes>
        <fullName>Contractor</fullName>
        <active>true</active>
        <label>Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Account</fullName>
        <active>true</active>
        <label>Public Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_Vertical</fullName>
        <active>false</active>
        <description>If the Account type is &quot;Owner,&quot; then their primary vertical(s) must be chosen.</description>
        <errorConditionFormula>AND(
 ISBLANK( Property_Specialty__c ),
 ISPICKVAL (Type , &quot;Owner&quot; ))</errorConditionFormula>
        <errorDisplayField>Property_Specialty__c</errorDisplayField>
        <errorMessage>Account Vertical required when Account Type is Owner.</errorMessage>
    </validationRules>
</CustomObject>